Native memory leak in ciMethodData ctor

XMLWordPrintable

    • b28

        The attached example cause growing size of java process java process from ~1G to 16G during 12 hours.
        Run: java -Xmx512M Main

        I haven't found any info in NMT detailed report.
        The final size is:

         3651 opc 20 0 16.5g 9.1g 25744 S 4800 2.9 34789:50 java


        Not reproduced with Xint so filing as a Compiler bug.

              Assignee:
              Vladimir Ivanov
              Reporter:
              Leonid Mesnik
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

                Created:
                Updated:
                Resolved: