8252049: Native memory leak in ciMethodData ctor

Reviewed-by: phh
Backport-of: 044616bd71ab82f0f67670152cecbabfee83d00c